# fastapi-odmantic

./: .gitignore  Jenkinsfile  pyproject.toml
fastapi_odmantic/: __init__.py  main.py
tests/unit/: test_middleware.py
